--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+
+/assets
+/index.php
+/.idea
+/protected/runtime
+/protected/config/main.golub.php
+/protected/config/main.ilija.php
+/protected/config/console.php
