Glavni layout i pocetna strana

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@
 /index.php
 /.idea
 /protected/runtime
-/protected/config/main.golub.php
-/protected/config/main.ilija.php
 /protected/config/console.php
+/stari sajt
